--- a/Intentsaktywnosci/app/src/main/res/layout/activity_second.xml
+++ b/Intentsaktywnosci/app/src/main/res/layout/activity_second.xml
@@ -1,60 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/second"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondActivity">
+    tools:context=".MainActivity"
+    android:gravity="center_vertical">
 
     <TextView
-        android:id="@+id/notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="informacja"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.324" />
-
+        android:id="@+id/notif"/>
     <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="name"
-        app:layout_constraintTop_toBottomOf="@+id/notification"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <EditText
-        android:id="@+id/surname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:hint="surname"
-        app:layout_constraintTop_toBottomOf="@+id/notification"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <EditText
-        android:id="@+id/Email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:hint="name"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        tools:layout_editor_absoluteX="0dp" />
-
+        android:layout_gravity="center_horizontal"
+        android:textSize="20dp"
+        android:hint="E-Mail"
+        android:layout_marginVertical="5dp"/>
     <Button
-        android:id="@+id/SecActivityButton"
+        android:id="@+id/backActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
-        android:text="Przejdź do poprzedniej aktywności"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notification" />
+        android:layout_gravity="center_horizontal"
+        android:textSize="20dp"
+        android:text="Wróć do poprzedniej aktywnosci"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
